tutorila 4 changes done

--- a/polls/templates/polls/detail.html
+++ b/polls/templates/polls/detail.html
@@ -7,11 +7,28 @@
     <title>Details</title>
 </head>
 <body>
+    <!-- this line get the question -->
     <h1>{{ question.question_text }}</h1>
-    <ul>
+    <!-- show error if something worng with question -->
+    {% if error_message %} 
+        <p><strong>{{ error_message }}</strong></p>
+    {% endif %}
+    <!-- form data going to views.py where it recieved the vote method. go there and see the rest -->
+    <form action="{% url 'polls:vote' question.id %}" method="POST">
+        {% csrf_token %}
+        {% for choice in question.choice_set.all %}
+            <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}">
+            <label for="choice{{ forloop.counter }}">{{ choice.choice_text }}</label><br><br>
+        {% endfor %}
+        <input type="submit" value="Vote">
+    </form>
+
+    <!-- At first printed this for showing the choice  -->
+    <!-- <ul>
         {% for choice in question.choice_set.all %}
         <li>{{ choice.choice_text }}</li>
         {% endfor %}
-    </ul>
+    </ul> -->
 </body>
+
 </html>
